--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "email": "benjamin.zaslavsky@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "twig/twig": "^3.5"
+    }
 }
