--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "bootstrap": "^5.2.3",
         "file-loader": "^6.2.0"
     }
 }
