--- a/.env
+++ b/.env
@@ -38,3 +38,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+APP_COMPOSER="%kernel.project_dir%/composer.json"
+APP_FEATURE=1
