--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,6 +10,9 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            int $numberPerPage:  20
+            string $sfVersion: '%env(key:require:key:symfony:key:extra:json:file:resolve:APP_COMPOSER)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
