--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,11 +34,11 @@ security:
         main:
             lazy: true
             provider: app_all_users_provider
-#            custom_authenticator: App\Security\AppLoginFormAuthenticator
-            form_login:
-                login_path: app_login
-                check_path: app_login
-                enable_csrf: true
+            custom_authenticator: App\Security\AppLoginFormAuthenticator
+#            form_login:
+#                login_path: app_login
+#                check_path: app_login
+#                enable_csrf: true
             logout:
                 path: app_logout
                 # where to redirect after logout
@@ -53,9 +53,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-#        - { path: ^/$, roles: PUBLIC_ACCESS }
-#        - { path: ^/login, roles: PUBLIC_ACCESS }
-#        - { path: ^/, roles: IS_AUTHENTICATED_FULLY, allow_if: 'request.isXmlHttpRequest()'] }
+        - { path: ^/admin/(book|movie)/\d+/edit, roles: ROLE_USER }
         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
