--- a/.env
+++ b/.env
@@ -41,3 +41,4 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 APP_COMPOSER="%kernel.project_dir%/composer.json"
 APP_FEATURE=1
+APP_MAINTENANCE=0
